# tp02_alternatives_correction

./: 01-pairImpair.cpp  02-anneesBissextiles.cpp  03-voyelleConsonne.cpp  04-plusGrandSur3.cpp  05-equation1Degre.cpp  06-calculatrice.cpp  06-calculatrice2.cpp  CMakeLists.txt
