cmake_minimum_required(VERSION 3.22)
project(TP2_projClion)

set(CMAKE_CXX_STANDARD 14)

#add_executable(TP1_Introduction main.cpp)
add_executable(01-pairImpair 01-pairImpair.cpp)
add_executable(02-anneesBissextiles 02-anneesBissextiles.cpp)
add_executable(03-voyelleConsonne 03-voyelleConsonne.cpp)
add_executable(04-plusGrandSur3 04-plusGrandSur3.cpp)
add_executable(05-equation1Degre 05-equation1Degre.cpp)
add_executable(06-calculatrice 06-calculatrice.cpp)
add_executable(06-calculatrice2 06-calculatrice2.cpp)

